--- a/dev/sass/screen.scss
+++ b/dev/sass/screen.scss
@@ -3,6 +3,13 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
+@import "vendor.normalize";
 
-/* TEST */
+@import "ui.grid";
+
+@import "variables";
+
+// Pages
+@import "page.app";
+
+
