more auth stuff

--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -16,9 +16,9 @@
 	</head>
 	<body>
 	
-	<form class="lunch-login-form">
-		<input type="text" class="lunch-inp-username">
-		<input type="text" class="lunch-inp-password">
+	<form action="/login" method="post" class="lunch-login-form">
+		<input type="text" name="username" class="lunch-inp-username">
+		<input type="password" name="password" class="lunch-inp-password">
 		<button type="submit" class="lunch-fn-login">Login</button>
 	</form>
 
