--- a/templates/page.app.html
+++ b/templates/page.app.html
@@ -29,12 +29,16 @@
 
 
 
+			<!-- Logo -->
+			<div class="lunch-logo-container">
+				<a  href="#" class="lunch-logo">
+					<img src="../static/img/logo.png" alt="">
+				</a>
+			</div>
+
+
 			<div class="lunch-container">
 
-				<!-- Logo -->
-
-				<img src="../static/img/logo.png" alt="">
-				<h1>Lunchpad</h1>
 
 
 				<!-- User -->
@@ -42,7 +46,7 @@
 				<div class="lunch-user">
 					<img src="" alt="" class="lunch-user-image">
 					<div class="lunch-user-name">Jogga Fröstl</div>
-					<button class="lunch-fn-logout">log out</button>
+					<a href="/logout" class="lunch-fn-logout">Logout</a>
 				</div>
 				
 
@@ -50,7 +54,7 @@
 				<!-- Notification Settings -->
 				
 				<div class="lunch-notifications">
-					<button class="lunch-fn-notify">Notify me</button>
+					<a href="" class="lunch-fn-notify">Notify me</a>
 				</div>
 
 
