--- a/dev/sass/_page.app.scss
+++ b/dev/sass/_page.app.scss
@@ -326,14 +326,14 @@
 
 	// Lunch Venue Guests
 
-	.lunch-venue-guests {
+	.lunch-venue-guests-container {
 		max-width: 600px;
 		margin-top: 50px;
 	}
 
 	// Venue Group
 
-	.lunch-venue-guest {
+	.lunch-venue-guests {
 		float: left;
 	}
 
